<resources>
    <string name="app_name">ToDo List</string>
    <string name="to_do_list">To Do List</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="developed_by_mohamed_ehab">Developed by Mohamed Ehab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add New Task</string>
    <string name="enter_your_task">enter your task title</string>
    <string name="enter_description">enter your task description</string>
    <string name="select_time">Select time</string>
    <string name="add">Add</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="edit_text">Edit text</string>
    <string name="this_is_title">This is title</string>
    <string name="task_details">Task details</string>
    <string name="save_changes">Save changes</string>

    <string-array name="language_array">
        <item>English</item>
        <item>عربي</item>
    </string-array>

    <string-array name="modes_array">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

</resources>